derive/tests/snapshots/qualified_type_spellings/Revision/get_all_revisions.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `revision` table.
    pub fn get_all_revisions<'a>(&'a self) -> impl Iterator<Item = Revision> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().revision().iter()
    }
}
