derive/tests/snapshots/qualified_type_spellings/Revision/get_revisions_by_draft_id.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Revision` iterator that contains all rows in the `revision` table whose value matches the value from the single-column btree index on the `draft_id` column.
    pub fn get_revisions_by_draft_id<'a>(
        &'a self,
        draft_id: impl Into<DraftId>,
    ) -> impl Iterator<Item = Revision> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().revision().draft_id().filter(draft_id.into().value())
    }
}
impl<T: crate::spacetimedsl::ReadContext> crate::spacetimedsl::ReadOnlyDSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get a `Revision` iterator that contains all rows in the `revision` table whose value matches the value from the single-column btree index on the `draft_id` column.
    pub fn get_revisions_by_draft_id<'a>(
        &'a self,
        draft_id: impl Into<DraftId>,
    ) -> impl Iterator<Item = Revision> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().revision().draft_id().filter(draft_id.into().value())
    }
}
