derive/tests/snapshots/qualified_type_spellings/Revision/table.snap
---
source: derive/src/characterization_tests.rs
---
pub trait this_compilation_error_occurs_because_the_revision_table_has_no_foreign_key_attribute_with_on_delete_defined_referencing_the_draft_table {}
#[derive(
    Clone,
    Debug,
    PartialEq,
    PartialOrd,
    Eq,
    Ord,
    Hash,
    ::spacetimedb::SpacetimeType
)]
pub struct RevisionId {
    value: u64,
}
impl Default for RevisionId {
    fn default() -> RevisionId {
        RevisionId {
            value: Default::default(),
        }
    }
}
impl std::fmt::Display for RevisionId {
    fn fmt(&self, f: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        write!(f, "{} {{ id: {:?} }}", "RevisionId", self.value)
    }
}
impl crate::spacetimedsl::Wrapper<u64> for RevisionId {
    fn new(value: u64) -> Self {
        Self { value }
    }
    fn value(&self) -> u64 {
        self.value.clone()
    }
}
impl From<&Revision> for RevisionId {
    fn from(value: &Revision) -> Self {
        RevisionId {
            value: value.id.clone(),
        }
    }
}
impl From<&Revision> for Option<RevisionId> {
    fn from(value: &Revision) -> Option<RevisionId> {
        Some(RevisionId {
            value: value.id.clone(),
        })
    }
}
impl From<&RevisionId> for Option<RevisionId> {
    fn from(value: &RevisionId) -> Option<RevisionId> {
        use crate::spacetimedsl::Wrapper;
        Some(RevisionId::new(value.value()))
    }
}
impl From<&RevisionId> for RevisionId {
    fn from(value: &RevisionId) -> Self {
        use crate::spacetimedsl::Wrapper;
        RevisionId::new(value.value())
    }
}
impl Revision {
    ///
    pub fn get_id(&self) -> RevisionId {
        use crate::spacetimedsl::Wrapper;
        RevisionId::new(self.id.clone())
    }
    ///
    pub fn get_draft_id(&self) -> DraftId {
        use crate::spacetimedsl::Wrapper;
        DraftId::new(self.draft_id.clone())
    }
    ///
    pub fn set_draft_id(&mut self, draft_id: impl Into<DraftId>) -> DraftId {
        use crate::spacetimedsl::Wrapper;
        let old_value = std::mem::replace(&mut self.draft_id, draft_id.into().value());
        DraftId::new(old_value)
    }
    ///
    pub fn get_created_at(&self) -> &::spacetimedb::Timestamp {
        use crate::spacetimedsl::Wrapper;
        &self.created_at
    }
    ///
    pub fn get_modified_at(&self) -> &std::option::Option<spacetimedb::Timestamp> {
        use crate::spacetimedsl::Wrapper;
        &self.modified_at
    }
}
///
pub struct CreateRevision {
    pub draft_id: DraftId,
}

// Generated DSL methods:
// count_of_all_revisions
// create_revision
// delete_revision_by_id
// delete_revisions_by_draft_id
// execute_on_delete_strategies_of_the_revision_table_after_multiple_rows_of_the_draft_table_were_deleted
// execute_on_delete_strategies_of_the_revision_table_after_one_row_of_the_draft_table_was_deleted
// get_all_revisions
// get_revision_by_id
// get_revisions_by_draft_id
// update_revision_by_id
